--- a/css/login.css
+++ b/css/login.css
@@ -16,6 +16,7 @@ body{
 }
 
 .container{
+    border-radius: 5px;
     width: 30%;
     height: 100%;
     position:relative;
@@ -23,6 +24,38 @@ body{
     display: block;
     margin: auto;
     border:1px solid #cccccc;
+}
+
+.aliens{
+    position: relative;
+    margin: -12% 20% 2%;
+    /*border: 1px solid black;*/
+    
+}
+
+.alien1{
+    margin-left: 10%;
+    width: 170px;
+    height: 170px;
+    transform: rotate(330deg);
+}
+
+.rocket1{
+    margin-left: 16%;
+    width: 170px;
+    height: 170px;
+    animation: change 1s;
+    animation-iteration-count: infinite;
+}
+
+
+
+.alien2{
+    width: 170px;
+    height: 170px;
+    float: right;
+    margin-right: 10%;
+    transform: rotate(30deg);
 }
 
 .col-1{
@@ -38,6 +71,9 @@ body{
     .container{
         width: 40%;
     }
+    .aliens{
+        margin-top: -15%;
+    }
 
 }
 
@@ -48,6 +84,21 @@ body{
     .container{
         width: 55%;
     }
+    .aliens{
+        margin-top: -18%;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .alien1{
+        width: 155px;
+        height: 155px;
+        margin-left: 7%;
+    }
+    .alien2{
+        width: 155px;
+        height: 155px;
+        margin-right: 7%;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -55,22 +106,23 @@ body{
         padding-top: 40%;
     }
     .container{
-        width: 75%;
+        width: 85%;
     }
-}
+    .aliens{
+        margin-top: -30%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 
-@media screen and (max-width: 600px) {
-    .col-1{
-        padding-top: 55%;
+    .alien1{
+        width: 140px;
+        height: 140px;
+        margin-left: 3%;
     }
-    .container{
-        width: 90%;
-    }
-    .guest{
-        font-size: 15px;
-    }
-    .facebook{
-        font-size: 15px;
+    .alien2{
+        width: 140px;
+        height: 140px;
+        margin-right: 3%;
     }
 }
 
@@ -100,6 +152,7 @@ body{
 }
 
 .guest{
+    border-radius: 3px;
     position: relative;
     text-decoration: none;
     border: 1px solid #cccccc;
@@ -120,6 +173,7 @@ body{
 }
 
 .facebook{
+    border-radius: 3px;
     position: relative;
     text-decoration: none;
     border: 1px solid #cccccc;
@@ -145,5 +199,6 @@ body{
     width: 8%;
     top: 10px;
 }
+
 
 
