--- a/main_page.css
+++ b/main_page.css
@@ -1,61 +1,82 @@
+
+    
 html,body{
     background-color:white;
     height:100%;
     margin:0px;
 }
 
-
 .navbar{
     width: 100%;
-    font-size: 16px;
-    text-align:right;
-    height:3%;
     font-family: 'Press Start 2P', cursive;
-    padding:10px 0px;
+    padding:1% 0%;
     color:rgb( 83, 140, 198);
     border-bottom:1px solid rgb(216, 216, 216);
     position:fixed;
     background-color: white;
 }
 
+.fii-invaders{
+    font-size: 0.8em;
+    margin-right:3%;
+    text-align:right;
+}
+
 .container{
     width: 100%;
     height:100%;
-    padding-top:10px;
+    padding-top:1%;
     overflow: hidden;
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(240, 240, 240);
    
     
     
 }
 .col1{ 
-    float:left;
-    width: 33%;
+    width:100%;
     border-right:1px solid rgb(216, 216, 216);
-    height:100%;
-    background-color:white;
+    background-color:rgb(240, 240, 240);
+    min-width:300px;
+    
     
 }
 .col2{
-    float:right;
-    width: 66%;
-    font-size: 16px;
+    float:none;
+    width:100%;
+    font-size: 0.8em;
     font-family: 'Press Start 2P';
-    height:100%;
    
 }
 .sidebar{
-    width: 45%;
+    width: 60%;
     display:block;
     margin:auto;
-    margin-top: 100px;
-    height:600px;
-    border:1px solid rgb(216, 216, 216);
+    min-width:230px;
+    margin-top: 150px;
+    height:20%;
     position:relative;
+    border: 1px solid rgb(216, 216, 216);
+    background-color: white;
+    max-width:200px;
+
+  
     
 
 }
 
+.title{
+    
+    margin-top:-1px;
+    width:5vw; /* 20% of the viewport width */
+    height: 5vw;
+    border: 1px rgb(216, 216, 216);
+    border-style:double;
+    margin-left:-1px;
+    margin-bottom:-4px;
+    background-color:white;
+    min-width:60px;
+    min-height:60px;
+}
 .sidebar-links {
     list-style-type: none;
     width:100%;
@@ -64,26 +85,29 @@ html,body{
     margin-bottom:-1px;
     margin-left:0px;
     margin-right:1px;
-    position:absolute; bottom:0;
+    position:absolute;
+
 }
 
 .sidebar-link {
-    font-size: 16px;
+    font-size: 0.8em;
     font-family: 'Press Start 2P', cursive;
     color: rgb(83, 140, 198);
     border: 1px 0px solid rgb(216, 216, 216);
     background-color:white;
     display: block;
     border:1px solid rgb(216, 216, 216); 
-    padding: 20px;
+    padding: 4%;
     margin:-1px;
     text-decoration: none;
 }
+
+
 .sidebar-link:hover {
     background-color: rgb(83, 140, 198);
     color:white;
     text-decoration: none;
-    transition: 0.5s;
+    transition: 0.7s;
 }
 
 
@@ -95,20 +119,195 @@ html,body{
    text-align:center;
 }
 
-canvas{
+.canvasContainer {
     display:block;
     margin:auto;
-    margin-top:100px;
+    position: relative;
+    width: 80%;
+    padding-bottom: 5%;
+    height: 0;
+}
+
+
+
+canvas{
+    margin-top:250px;
     border:1px solid rgb(216, 216, 216);
-    width:80%;
-    height:600px;
+    width: 100%;
 }
 
-.material-icons.md-16 { font-size: 30px; }
-li:before { font-family: "Material Icons"; content: "\E60E";margin-right:5px;
-font-size:22px; }
-li.bug:before{
-    content: "\E868";
+li{
+    list-style-type: none;
+    margin: 0;
+    
+}
+li:before { 
+    font-family: "Material Icons"; 
+    margin-right:15px;
+    font-size:1.5em;
+    background-size: 30px 30px;
+    display: inline-block;
+    width: 30px; 
+    height: 30px;
+    content:"";
+
+ }
+
+ li.rules:before{
+    background-image: url('invader1_blue.png');    
+}
+
+ li.rules:hover::before{
+    background-image: url('invader1_white.png');
+    
+}
+
+li.controls:before{
+    background-image: url("invader2_blue.png");
+    background-size: 24px 28px;
+    display: inline-block;
+    width: 24px; 
+    height: 28px;
+    margin-left:4px;    
+    
+}
+
+li.controls:hover::before{
+    background-image: url("invader2_white.png");     
+}
+
+li.desc:before{
+    background-image: url("invader3_blue.png");
+    background-size: 38px 30px;
+    display: inline-block;
+    width: 38px; 
+    height: 30px;
+    margin-left:-6px;
+} 
+
+li.desc:hover::before{
+    background-image: url("invader3_white.png");
 }
 
 
+li.highscores:before{
+    background-image: url('invader4_blue.png');
+}
+li.highscores:hover:before{
+    background-image: url('invader4_white.png');
+}
+
+
+
+
+  @keyframes hvr-bob {
+ 
+    50% {
+      -webkit-transform: translateY(-1px);
+      transform: translateY(-1x);
+      
+    }
+    100% {
+      -webkit-transform: translateY(-8px);
+      transform: translateY(-8px);
+      
+    }
+  }
+ 
+  @keyframes hvr-bob-float {
+    100% {
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
+      
+    }
+  }
+  li.hvr-bob:before {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(0px) translateY(-4px);
+    transform: perspective(0px) translateY(-4px);
+    box-shadow: 0 0 0px transparent;
+  }
+  li.hvr-bob:hover::before, li.hvr-bob:focus::before, li.hvr-bob:active::before {
+    -webkit-animation-name: hvr-bob-float, hvr-bob;
+    animation-name: hvr-bob-float, hvr-bob;
+    -webkit-animation-duration: .3s, 1.5s;
+    animation-duration: .6s, 1.5s;
+    -webkit-animation-delay: 0s, .3s;
+    animation-delay: 0s, .3s;
+    -webkit-animation-timing-function: ease-out, ease-in-out;
+    animation-timing-function: ease-out, ease-in-out;
+    -webkit-animation-iteration-count: 1, infinite;
+    animation-iteration-count: 1, infinite;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-direction: normal, alternate;
+    animation-direction: normal, alternate;
+  }
+
+  @media only screen and (min-width: 1000px){
+
+    .sidebar{
+        margin-top:200px;
+    }
+    canvas{
+        margin-top:200px;
+    }
+
+    .sidebar-link,.fii-invaders{
+        font-size:0.9em;
+    }
+    .sidebar{
+        min-width:260px;
+    }
+    .col1{
+        float:left;
+        width: 30%;
+        height:100%;
+    }
+    .col2{
+        width: 69%;
+        float:right;
+        height:100%;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .sidebar-link,.fii-invaders{
+        font-size:1em;
+    }
+
+    li:before { 
+        margin-right:15px;
+        background-size: 40px 40px;
+        width: 40px; 
+        height: 40px;
+    }
+    
+    li.controls:before{
+        background-size: 34px 38px;
+        width: 34px; 
+        height: 38px;
+        margin-left:4px;    
+        
+    }
+    
+  
+    li.desc:before{
+        background-size: 48px 40px;
+        width: 48px; 
+        height: 40px;
+        margin-left:-6px;
+    } 
+    
+    .col1{
+        float:left;
+        width: 30%;
+        height:100%;
+    }
+    .col2{
+        width: 69%;
+        float:right;
+        height:100%;
+    }
+}
