--- a/archived/index-style.css
+++ b/archived/index-style.css
@@ -68,8 +68,23 @@ html {
     transition-timing-function: ease-in;
     transition-delay: 0.1s;
 }
+/*.menu li.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+.menu li:hover .dropdown-content
+{    
+    display: block;
+}*/
 .menu li:hover{
     background-color: #0099cc;
+    display:block;
     /*width: 200px;
     height: 50px;*/
 }
+
