--- a/css/login.css
+++ b/css/login.css
@@ -41,14 +41,21 @@ body{
 }
 
 .rocket1{
-    margin-left: 16%;
+    position: absolute;
+    top: 15%;
+    left: 42%;
     width: 170px;
     height: 170px;
-    animation: change 1s;
-    animation-iteration-count: infinite;
 }
 
-
+.rocket2{
+    opacity: 0;
+    position: absolute;
+    top: 15%;
+    left: 42%;
+    width: 170px;
+    height: 170px;
+}
 
 .alien2{
     width: 170px;
@@ -73,6 +80,9 @@ body{
     }
     .aliens{
         margin-top: -15%;
+    }
+    .rocket1{
+        left: 40%;
     }
 
 }
@@ -99,6 +109,22 @@ body{
         height: 155px;
         margin-right: 7%;
     }
+    .rocket1{
+        margin-left: 10%;
+        left:30%;
+        top: 13%;
+        width: 160px;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .rocket1{
+        left:28%;
+        top: 13%;
+        width: 160px;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -124,6 +150,59 @@ body{
         height: 140px;
         margin-right: 3%;
     }
+}
+
+@media screen and (max-width: 670px) {
+    .rocket1{
+            left:25%;
+            top: 13%;
+            width: 160px;
+            height: auto;
+        }
+}
+
+@media screen and (max-width: 600px) {
+    .col-1{
+        padding-top: 45%;
+    }
+    .container{
+        width: 95%;
+    }
+    .aliens{
+        margin-top: -30%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .alien1{
+        width: 140px;
+        height: 140px;
+        margin-left: 1%;
+    }
+    .alien2{
+        width: 140px;
+        height: 140px;
+        margin-right: 1%;
+    }
+    .guest{
+        font-size: 13px;
+    }
+    .facebook{
+        font-size: 11px;
+    }
+    ::-webkit-scrollbar{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .rocket1{
+            margin-left: 8%;
+            left:23%;
+            top: 13%;
+            width: 160px;
+            height: auto;
+        }
 }
 
 .login{
@@ -199,6 +278,3 @@ body{
     width: 8%;
     top: 10px;
 }
-
-
-
