--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,7 @@ body{
     padding: 17px 4%;
     position: fixed;
     background-color: #ffffff;
+    z-index: 999;
 }
 
 .container{
@@ -69,140 +70,6 @@ body{
     width: 100%;
     height:100%;
     padding-top:15%;
-}
-
-@media screen and (max-width: 1600px) {
-    .col-1{
-        padding-top: 20%;
-    }
-    .container{
-        width: 40%;
-    }
-    .aliens{
-        margin-top: -15%;
-    }
-    .rocket1{
-        left: 40%;
-    }
-
-}
-
-@media screen and (max-width: 1200px) {
-    .col-1{
-        padding-top: 25%;
-    }
-    .container{
-        width: 55%;
-    }
-    .aliens{
-        margin-top: -18%;
-        margin-left: 15%;
-        margin-right: 15%;
-    }
-    .alien1{
-        width: 155px;
-        height: 155px;
-        margin-left: 7%;
-    }
-    .alien2{
-        width: 155px;
-        height: 155px;
-        margin-right: 7%;
-    }
-    .rocket1{
-        margin-left: 10%;
-        left:30%;
-        top: 13%;
-        width: 160px;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 1000px){
-    .rocket1{
-        left:28%;
-        top: 13%;
-        width: 160px;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .col-1{
-        padding-top: 40%;
-    }
-    .container{
-        width: 85%;
-    }
-    .aliens{
-        margin-top: -30%;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .alien1{
-        width: 140px;
-        height: 140px;
-        margin-left: 3%;
-    }
-    .alien2{
-        width: 140px;
-        height: 140px;
-        margin-right: 3%;
-    }
-}
-
-@media screen and (max-width: 670px) {
-    .rocket1{
-            left:25%;
-            top: 13%;
-            width: 160px;
-            height: auto;
-        }
-}
-
-@media screen and (max-width: 600px) {
-    .col-1{
-        padding-top: 45%;
-    }
-    .container{
-        width: 95%;
-    }
-    .aliens{
-        margin-top: -30%;
-        margin-left: 1%;
-        margin-right: 1%;
-    }
-
-    .alien1{
-        width: 140px;
-        height: 140px;
-        margin-left: 1%;
-    }
-    .alien2{
-        width: 140px;
-        height: 140px;
-        margin-right: 1%;
-    }
-    .guest{
-        font-size: 13px;
-    }
-    .facebook{
-        font-size: 11px;
-    }
-    ::-webkit-scrollbar{
-        display: none;
-    }
-}
-
-@media screen and (max-width: 550px) {
-    .rocket1{
-            margin-left: 8%;
-            left:23%;
-            top: 13%;
-            width: 160px;
-            height: auto;
-        }
 }
 
 .login{
@@ -278,3 +145,215 @@ body{
     width: 8%;
     top: 10px;
 }
+
+.ship{
+    position: absolute;
+    top: 800px;
+    width: 170px;
+    height: 80px;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes move {
+    0% {left: 10%}
+    50% {left: 80%}
+    100% {left: 10%}
+}
+
+.shape1{
+    width: 6%;
+    height: 10%;
+    margin-left: 46.5%;
+    background-color: #538cc6;
+}
+
+.shape2{
+    width: 15%;
+    height: 20%;
+    margin-left: 42%;
+    background-color: #538cc6;
+    
+}
+
+.shape3{
+    width: 80%;
+    height: 20%;
+    margin-left: 10%;
+    background-color: #538cc6;
+}
+
+.shape4{
+    width: 100%;
+    height: 50%;
+    background-color: #538cc6;
+}
+
+.shape5{
+    width: 3%;
+    height: 10%;
+    margin-left: 48%;
+    background-color: #538cc6;
+}
+
+@media screen and (max-width: 1600px) {
+    .col-1{
+        padding-top: 20%;
+    }
+    .container{
+        width: 40%;
+    }
+    .aliens{
+        margin-top: -15%;
+    }
+    .rocket1{
+        left: 40%;
+    }
+    .ship{
+        animation-duration: 8s;
+    }
+
+}
+
+@media screen and (max-width: 1200px) {
+    .col-1{
+        padding-top: 25%;
+    }
+    .container{
+        width: 55%;
+    }
+    .aliens{
+        margin-top: -18%;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .alien1{
+        width: 155px;
+        height: 155px;
+        margin-left: 7%;
+    }
+    .alien2{
+        width: 155px;
+        height: 155px;
+        margin-right: 7%;
+    }
+    .rocket1{
+        margin-left: 10%;
+        left:30%;
+        top: 13%;
+        width: 160px;
+        height: auto;
+    }
+    .ship{
+        animation-duration: 5s;
+    }
+    @keyframes move {
+        0% {left: 10%}
+        50% {left: 75%}
+        100% {left: 10%}
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .rocket1{
+        left:28%;
+        top: 13%;
+        width: 160px;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .col-1{
+        padding-top: 40%;
+    }
+    .container{
+        width: 85%;
+    }
+    .aliens{
+        margin-top: -30%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .alien1{
+        width: 140px;
+        height: 140px;
+        margin-left: 3%;
+    }
+    .alien2{
+        width: 140px;
+        height: 140px;
+        margin-right: 3%;
+    }
+    .ship{
+        width: 150px;
+        height: 60px;
+        animation-duration: 3s; 
+    }
+    @keyframes move {
+        0% {left: 10%}
+        50% {left: 72%}
+        100% {left: 10%}
+    }
+}
+
+@media screen and (max-width: 670px) {
+    .rocket1{
+            left:25%;
+            top: 13%;
+            width: 160px;
+            height: auto;
+        }
+}
+
+@media screen and (max-width: 600px) {
+    .col-1{
+        padding-top: 45%;
+    }
+    .container{
+        width: 95%;
+    }
+    .aliens{
+        margin-top: -30%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .alien1{
+        width: 140px;
+        height: 140px;
+        margin-left: 1%;
+    }
+    .alien2{
+        width: 140px;
+        height: 140px;
+        margin-right: 1%;
+    }
+    .guest{
+        font-size: 13px;
+    }
+    .facebook{
+        font-size: 11px;
+    }
+    ::-webkit-scrollbar{
+        display: none;
+    }
+    @keyframes move {
+        0% {left: 5%}
+        50% {left: 65%}
+        100% {left: 5%}
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .rocket1{
+            margin-left: 8%;
+            left:23%;
+            top: 13%;
+            width: 160px;
+            height: auto;
+        }
+}
+
