--- a/css/login.css
+++ b/css/login.css
@@ -14,6 +14,8 @@ body{
     position: fixed;
     background-color: #ffffff;
     z-index: 999;
+    box-shadow: 1px 2px 5px #9494b8;
+    text-shadow: 1px 2px 5px #9494b8;
 }
 
 .container{
@@ -25,6 +27,7 @@ body{
     display: block;
     margin: auto;
     border:1px solid #cccccc;
+    box-shadow: 1px 2px 5px #9494b8;    
 }
 
 .aliens{
@@ -47,6 +50,7 @@ body{
     left: 42%;
     width: 170px;
     height: 170px;
+    
 }
 
 .rocket2{
@@ -79,6 +83,8 @@ body{
     font-size: 20px;
     font-family: 'Press Start 2P', cursive;
     padding: 15px 5%;
+    box-shadow: 1px 1px 5px #9494b8;
+    text-shadow: 1px 2px 5px #9494b8;
 }
 
 .logins{
@@ -109,6 +115,7 @@ body{
     margin: auto;
     background-color: #538cc6;
     transition: 0.5s;
+    text-shadow: 1px 2px 5px #9494b8;
 }
 
 .guest:hover{
@@ -131,6 +138,7 @@ body{
     color: #ffffff;
     background-color: #538cc6;
     transition: 0.6s;
+    text-shadow: 1px 2px 5px #9494b8;
 }
 
 .facebook:hover{
@@ -144,6 +152,7 @@ body{
     position: relative;
     width: 8%;
     top: 10px;
+    box-shadow: 1px 2px 5px #9494b8;
 }
 
 .ship{
