--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -21,7 +21,8 @@ html,body{
     position: fixed;
     background-color: #ffffff;
     box-shadow: 1px 2px 5px #9494b8;
-    text-shadow: 1px 2px 5px #9494b8;
+    text-shadow: 1px 3px 2px #a9a9d1;
+    z-index:999;
     
 }
 
@@ -41,6 +42,7 @@ html,body{
     padding-top:1%;
     overflow: hidden;
     background-color:#e6e6e6;
+    height:130%;
     
    
     
@@ -131,6 +133,7 @@ html,body{
     color:rgb(83, 140, 198);
     background-color:white;
     padding:5%;
+    font-size:10px;
     box-shadow: 1px 2px 5px #9494b8;
 }
 #controls {
@@ -165,7 +168,7 @@ html,body{
 
 
 canvas{
-    margin-top:250px;
+    margin-top:400px;
     border: 1px solid #cccccc;
     width: 100%;
     background-color: #ffb6c1;
@@ -288,7 +291,12 @@ li.highscores:hover:before{
   }
 
   @media only screen and (min-width: 1000px){
-
+    #controls,#rules{
+        font-size:14px;
+    }
+    .container{
+        height:100%;
+    }
     #alien{
         width:30px;
         height:17px;
