--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -63,6 +63,28 @@ html,body{
     font-family: 'Press Start 2P';
    
 }
+
+.invader1{
+    display:inline-block;
+    position:absolute;
+    top: 6%;
+    width:120px;
+    height:auto;
+    overflow:hidden;
+    transform: rotate(350deg)
+
+}
+
+.invader2{
+    right: 0%;
+    display: inline-block;
+    position: absolute;
+    top: 6%;
+    width: 120px;
+    height: auto;
+    transform:rotate(10deg)
+}
+
 .sidebar{
     width: 60%;
     display:block;
