--- a/css/description.css
+++ b/css/description.css
@@ -168,6 +168,75 @@ h1{text-align:center;}
   transition-delay: 0.2s;
 }
 
+.overlay {
+  width:100%;
+  height:100%;
+  background-color: rgb(83,140,198);
+  transition: opacity 500ms;
+  visibility: hidden;
+  overflow: hidden;
+  float: center;
+  border: 0px solid rgba(0,0,0,0.4);  
+  position: relative;
+  text-align: center;
+  cursor: default;
+  display: block;
+  border-radius: 4px;    
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+  position:absolute;
+}
+
+.popup {
+  margin-left: 70px auto;
+  padding: 20px;
+  border-radius: 5px;
+  width: 100%;
+  /*position: relative;*/
+  transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+  margin-top: 50px;
+  color: #fff;
+  font-family: 'Press Start 2P';
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+}
+.popup .close:hover {
+  color: #f1f1f1;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+  margin-top:50px;
+  text-align:left;
+  line-height:30px;
+  color: rgb( 255, 255, 255);
+  font-family: 'Press Start 2P'
+}
+
+@media screen and (max-width: 700px){
+    .box{
+        width: 70%;
+    }
+    .popup{
+        width: 70%;
+    }
+    .popupall{
+        width:70%;
+    }
+}
 
 @media only screen and (max-width: 767px) { 
   
