--- a/css/description.css
+++ b/css/description.css
@@ -20,7 +20,6 @@ html,body{
   background-color: #ffffff;
   box-shadow: 1px 2px 5px #9494b8;
   text-shadow: 1px 3px 2px #a9a9d1;
-  z-index:999;
   
 }
 
@@ -98,7 +97,7 @@ h1{text-align:center;}
   position: absolute;
   overflow: hidden;
   top: 0;
-  left: 0
+  left: 0;
 }
 
 /* box */
@@ -182,7 +181,8 @@ h1{text-align:center;}
   text-align: center;
   cursor: default;
   display: block;
-  border-radius: 4px;    
+  border-radius: 4px;
+  margin-left: -17.5%;
 }
 .overlay:target {
   visibility: visible;
