--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -22,7 +22,7 @@ html,body{
     background-color: #ffffff;
     box-shadow: 1px 2px 5px #9494b8;
     text-shadow: 1px 3px 2px #a9a9d1;
-    z-index:999;
+    /*z-index:998;*/
     
 }
 
@@ -415,6 +415,7 @@ li.highscores:hover:before{
   width: 90%;
   /*position: relative;*/
   transition: all 5s ease-in-out;
+  /*z-index:999;*/
 }
 
 .popup h2 {
