--- a/css/description.css
+++ b/css/description.css
@@ -20,6 +20,7 @@ html,body{
   background-color: #ffffff;
   box-shadow: 1px 2px 5px #9494b8;
   text-shadow: 1px 3px 2px #a9a9d1;
+  z-index: 999;
   
 }
 
@@ -170,7 +171,7 @@ h1{text-align:center;}
 
 .overlay {
   width:100%;
-  height:100%;
+  height:95%;
   background-color: rgb(83,140,198);
   /*transition: opacity 500ms;*/
   visibility: hidden;
@@ -182,7 +183,8 @@ h1{text-align:center;}
   cursor: default;
   display: block;
   border-radius: 4px;
-  margin-left: -17.5%;
+  /*margin-top: 200px;*/
+  /*margin-left: -17.5%;*/
 }
 .overlay:target {
   visibility: visible;
