--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -116,17 +116,18 @@ html,body{
     background-color:white;
     box-shadow: 1px 2px 5px #9494b8;
 }
+
 .title{
     
-    margin-top:1px;
-    width:5vw; /* 20% of the viewport width */
-    height: 5vw;
-    margin-bottom:-1.5px;
-    background-color:white;
-    min-width:60px;
-    min-height:60px;
-    border-right: 1px solid #e6e5e5;
-    overflow: hidden;
+    width:200px;
+    height:200px;
+}
+#playerIcon{
+    width:30%;
+    height:auto;
+    margin-bottom:-1px;
+    margin-left:2px;
+    margin-top:2px;
 }
 .sidebar-links {
     list-style-type: none;
