--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -18,7 +18,11 @@ html,body{
     background-color:white;
     height:100%;
     margin:0px;
+    min-height:500px;
+    min-width:700px;
+    
 }
+body { height: 150%; margin-bottom: 1px; }
 
 
 
@@ -50,26 +54,25 @@ html,body{
 
 .container{
     width: 100%;
-    height:100%;
     padding-top:1%;
     overflow: hidden;
     background-color:#e6e6e6;
-    height:130%;
+    height:120%; margin-bottom: 1px; }
     
    
     
     
-}
+
 .col1{ 
     width:100%;
-    border-right:0px solid #cccccc;
+    
     background-color:#e6e6e6;;
     min-width:300px;
     
     
 }
 .col2{
-    float:none;
+    float:left;
     width:100%;
     font-size: 0.8em;
     font-family: 'Press Start 2P';
@@ -88,13 +91,19 @@ html,body{
 }
 
 .invader2{
+   
+    display:none;
+}
+.invader3{
     right: 0%;
     display: inline-block;
     position: absolute;
     top: 6%;
+    margin-left:20%;
     width: 120px;
     height: auto;
-    transform:rotate(10deg)
+    transform:rotate(10deg);
+    overflow:hidden;
 }
 
 .sidebar{
@@ -197,7 +206,7 @@ html,body{
 
 .canvasContainer {
     
-    margin:auto;
+
     position: relative;
     width: 80%;
     padding-bottom: 5%;
@@ -207,9 +216,11 @@ html,body{
 
 
 canvas{
-    margin-top:400px;
+    position:relative;
+    margin-top:-180px;
     border: 1px solid #cccccc;
     width: 100%;
+    margin-left:12%;
     background-color: #ffb6c1;
 }
 
@@ -334,6 +345,23 @@ li.highscores:hover:before{
   }
 
   @media only screen and (min-width: 1000px){
+
+    .invader2{
+        right: 0%;
+        display: inline-block;
+        position: absolute;
+        top: 6%;
+        width: 120px;
+        height: auto;
+        transform:rotate(10deg);
+        overflow:hidden;}
+    .invader3{
+        display:none;
+    }
+    body { height: 100%; margin-bottom: 1px; }
+    html{
+        overflow-x:hidden;
+    }
     #controls,#rules{
         font-size:12px;
     }
@@ -350,6 +378,7 @@ li.highscores:hover:before{
     }
     canvas{
         margin-top:170px;
+        margin-left:0px;
     }
 
     .sidebar-link,.fii-invaders,.navbar{
@@ -376,49 +405,12 @@ i {
     padding: 3px;
     margin-right:3.5px;
   }
-@media screen and (min-width: 1800px) {
+@media screen and (min-width: 1500px) {
+    html,body{
+        overflow:hidden;
+    }
    
-    .sidebar-link,.fii-invaders,.navbar{
-        font-size:1em;
-    }
-
-    .sidebar{
-        min-width:350px;
-        height:50%;
-    }
-    li:before { 
-        margin-right:15px;
-        background-size: 40px 40px;
-        width: 40px; 
-        height: 40px;
-    }
     
-    li.controls:before{
-        background-size: 34px 38px;
-        width: 34px; 
-        height: 38px;
-        margin-left:4px;    
-        
-    }
-    
-  
-    li.desc:before{
-        background-size: 37px 40px;
-        width: 37px; 
-        height: 40px;
-        margin-left:4px;
-    } 
-    
-    .col1{
-        float:left;
-        width: 30%;
-        height:100%;
-    }
-    .col2{
-        width: 69%;
-        float:right;
-        height:100%;
-    }
 }
 .overlay {
   position: fixed;
