--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -24,7 +24,18 @@ html,body{
 }
 body { height: 150%; margin-bottom: 1px; }
 
-
+.invader2{
+    right: 0%;
+    display: inline-block;
+    position: absolute;
+    top: 6%;
+    width: 120px;
+    height: auto;
+    transform:rotate(10deg);
+    overflow:hidden;}
+.invader3{
+    display:none;
+}
 
 .navbar{
     width: 100%;
@@ -65,13 +76,14 @@ body { height: 150%; margin-bottom: 1px; }
 
 .col1{ 
     width:100%;
-    
-    background-color:#e6e6e6;;
+    height:70%;
+    background-color:#e6e6e6;
     min-width:300px;
     
     
 }
 .col2{
+    height:30%;
     float:left;
     width:100%;
     font-size: 0.8em;
@@ -90,21 +102,7 @@ body { height: 150%; margin-bottom: 1px; }
 
 }
 
-.invader2{
-   
-    display:none;
-}
-.invader3{
-    right: 0%;
-    display: inline-block;
-    position: absolute;
-    top: 6%;
-    margin-left:20%;
-    width: 120px;
-    height: auto;
-    transform:rotate(10deg);
-    overflow:hidden;
-}
+
 
 .sidebar{
     width: 60%;
@@ -211,6 +209,8 @@ body { height: 150%; margin-bottom: 1px; }
     width: 80%;
     padding-bottom: 5%;
     height: 0;
+    z-index:0;
+    
 }
 
 
@@ -346,17 +346,8 @@ li.highscores:hover:before{
 
   @media only screen and (min-width: 1000px){
 
-    .invader2{
-        right: 0%;
-        display: inline-block;
-        position: absolute;
-        top: 6%;
-        width: 120px;
-        height: auto;
-        transform:rotate(10deg);
-        overflow:hidden;}
-    .invader3{
-        display:none;
+    .canvasContainer{
+        margin-left:25px;
     }
     body { height: 100%; margin-bottom: 1px; }
     html{
@@ -481,7 +472,7 @@ i {
       margin:0px;
   }
   .overlay{
-    width:350px;
+    width:30%;
     font-size:12px;
 }
 .popup .content{
@@ -491,15 +482,40 @@ i {
 
 }
 
-@media screen and (max-width: 500px){
-    .overlay{
-        width:100px;
-        font-size:12px;
-    }
+@media screen and (max-width: 600px){
+    
     .popup .content{
         font-size:12px;
     }
    
+    .invader2{
    
+        display:none;
+    }
+    .invader3{
+        right: 0%;
+        display: inline-block;
+        position: absolute;
+        top: 6%;
+        margin-left:20%;
+        width: 120px;
+        height: auto;
+        transform:rotate(10deg);
+        overflow:hidden;
+    }
       
+}
+
+@media screen and (max-width: 600px){
+    .invader3{
+        display:none}
+        
+ 
+}
+@media screen and (max-width: 1000px){
+
+.overlay{
+    width:100%;
+    height:100%;
+    font-size:12px;
 }
