--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -221,7 +221,7 @@ canvas{
     border: 1px solid #cccccc;
     width: 100%;
     margin-left:12%;
-    background-color: #ffb6c1;
+    /*background-color: #ffb6c1;*/
 }
 
 li{
