added game over screen

--- a/css/index-style_updated.css
+++ b/css/index-style_updated.css
@@ -27,6 +27,11 @@
 }
 #intro-canvas{
     background-color:#608dbb;
+    display:none;
+}
+#end-canvas{
+    background-color:#608dbb;
+    display:none;
 }
     
 html,body{
